--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <!DOCTYPE html>
+    <!-- ICS2O-Unit1-04-HTML-CSS -->
+    <html lang="en-ca">
+    <head>
+      <meta charset="utf-8">
+      <meta name="description" content="My webpage, with CSS">
+      <meta name="keywords" content="mths, ics2o">
+      <meta name="author" content="Kenneth Gouw">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>My first webpage</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <p>Paragraph</p>
+    <p>Hello</p>
   </body>
 </html>
