--- a/index.html
+++ b/index.html
@@ -1,28 +1,18 @@
 <!DOCTYPE html>
-<!-- ICD20-Unit1-03-HTML-Hello_World -->
+<!-- ICS2O-Unit1-04-HTML-CSS -->
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="My first webpage, with proper style">
-  <meta name="keywords" content="icd20, mths">
-  <meta name="author" content="Kenneth Gouw">
+  <meta name="description" content="My first webpage with CSS">
+  <meta name="keywords" content="mths, ics2o">
+  <meta name="author" content="Fetuha">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
-  <title>My first webpage, with style</title>
+  <title>My first webpage, with CSS</title>
 </head>
-<style>
-  #my-header {
-    background-color: rgb(0, 0, 0);
-    color: azure;
-    padding: 40px;
-    text-align: center;
-  }
-</style>
-<body style="background-color: cadetblue;">
-  <h1 id="my-header">Style is nice to look at</h1>
-  <p style="background-color: rgb(224, 155, 155);">Proper HTML styling appeals to people</p>
-  <img src="./images/HTML-style-guide (1).jpeg" alt="Style is important">
-  <p>
-  </p>
+<body>
+  <h1> FDG made</h1>
+  <p>Propa</p>
+  <img src="./images/HTML-style-guide (1).jpeg" alt="style">
 </body>
 </html>
