--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta name="description" content="My first webpage with CSS">
   <meta name="keywords" content="mths, ics2o">
-  <meta name="author" content="Fetuha">
+  <meta name="author" content="Kenneth">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
   <title>My first webpage, with CSS</title>
 </head>
 <body>
-  <h1> FDG made</h1>
+  <h1> GK made this</h1>
   <p>Propa</p>
   <img src="./images/HTML-style-guide (1).jpeg" alt="style">
 </body>
