--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="My first webpage with CSS">
+  <meta name="description" content="My first webpage, with CSS">
   <meta name="keywords" content="mths, ics2o">
-  <meta name="author" content="Kenneth">
+  <meta name="author" content="Mr. Coxall">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
   <title>My first webpage, with CSS</title>
 </head>
 <body>
-  <h1> GK made this</h1>
-  <p>Propa</p>
+  <h1>Style is important</h1>
+  <p>Proper HTML style is important</p>
   <img src="./images/HTML-style-guide (1).jpeg" alt="style">
+  <p>
+    <a href="./index2.html">My index2.html page</a>
+  </p>
 </body>
 </html>
